# swim-rag

./: .clineignore  DOCS.md  README.md
.clinerules/: create-task.md  epcc.md  memory.md  productContext.md  systemPatterns.md  techContext.md  work-task.md
backend/docs/: docs.go  swagger.yaml
backend/internal/genai/: plan.go
backend/internal/models/: models.go  payloads.go
backend/internal/server/: service.go
deployments/0-infra/: cicd.tf  outputs.tf  variables.tf
docs/: API.md
mcp-server/: .gitignore  Dockerfile  README.md  Taskfile.sh  main-pr.cloudbuild.yaml  pyproject.toml  release.cloudbuild.yaml
mcp-server/src/: client.py
mcp-server/src/swim_rag_mcp/: main.py  schemas.py  utils.py
